--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,55 @@
-absl-py==2.2.0
-astunparse==1.6.3
-cachetools==5.5.2
-certifi==2025.1.31
-charset-normalizer==3.4.1
-contourpy==1.3.1
-cycler==0.12.1
-flatbuffers==25.2.10
-fonttools==4.56.0
-gast==0.4.0
-google-auth==2.38.0
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-grpcio==1.71.0
-h5py==3.13.0
-idna==3.10
-joblib==1.4.2
-keras==2.13.1
-kiwisolver==1.4.8
-libclang==18.1.1
-Markdown==3.7
-MarkupSafe==3.0.2
-matplotlib==3.7.2
-numpy==1.24.4
-oauthlib==3.2.2
-opencv-python==4.11.0.86
-opt_einsum==3.4.0
-packaging==24.2
-pillow==11.1.0
-protobuf==4.25.6
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pyparsing==3.0.9
-python-dateutil==2.9.0.post0
-requests==2.32.3
-requests-oauthlib==2.0.0
-rsa==4.9
-scikit-learn==1.2.2
-scipy==1.15.2
-six==1.17.0
-tensorboard==2.13.0
-tensorboard-data-server==0.7.2
-tensorflow==2.13.0
-tensorflow-estimator==2.13.0
-tensorflow-intel==2.13.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.5.0
-threadpoolctl==3.6.0
-typing_extensions==4.5.0
-urllib3==2.3.0
-Werkzeug==3.1.3
-wrapt==1.17.2
+absl-py>=1.4.0
+astunparse>=1.6.3
+cachetools>=5.3.0
+certifi>=2022.12.7
+charset-normalizer>=2.1.1
+contourpy>=1.0.7
+cycler>=0.11.0
+flask>=2.2.0
+flask-cors>=3.0.10
+flatbuffers>=23.1.21
+fonttools>=4.25.0
+gast>=0.4.0
+google-auth>=2.16.2
+google-auth-oauthlib>=0.4.6
+google-pasta>=0.2.0
+grpcio>=1.51.3
+h5py>=3.8.0
+idna>=3.4
+joblib>=1.1.1
+keras>=2.13.1
+kiwisolver>=1.4.4
+libclang>=14.0.6
+Markdown>=3.4.3
+MarkupSafe>=2.1.2
+matplotlib>=3.7.1
+numpy>=1.22.0,<=1.24.3
+oauthlib>=3.2.2
+opencv-python>=4.7.0.72
+opt_einsum>=3.3.0
+packaging>=23.0
+pandas>=2.0.0
+pillow>=9.4.0
+protobuf>=3.20.3
+pyasn1>=0.4.8
+pyasn1_modules>=0.2.8
+pyparsing>=3.0.9
+python-dateutil>=2.8.2
+requests>=2.28.2
+requests-oauthlib>=1.3.1
+rsa>=4.9
+scikit-learn>=1.2.2
+scipy>=1.10.1
+seaborn>=0.12.0
+six>=1.16.0
+tensorboard>=2.13.0
+tensorboard-data-server>=0.7.0
+tensorflow>=2.13.0
+tensorflow-estimator>=2.13.0
+tensorflow-io-gcs-filesystem>=0.31.0
+termcolor>=2.2.0
+threadpoolctl>=3.1.0
+typing_extensions>=4.5.0
+urllib3>=1.26.15
+Werkzeug>=2.2.3
+wrapt>=1.14.1
